--- a/about.html
+++ b/about.html
@@ -102,7 +102,7 @@
                 </div>
                 <div class="row">
                     <div class="col-md-6 col-lg-6">
-                        <div class="memoji-avatar d-flex align-items-center justify-content-center py-2">
+                        <div class="memoji-avatar d-flex align-items-center justify-content-lg-center py-2">
                             <img class="flex-shrink-0" src="img/about-memoji-01.png" alt="">
                             <div class="ps-3">
                                 <p class="fz-15 fw-bold mb-0">Вождь</p>
@@ -111,7 +111,7 @@
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-6">
-                        <div class="memoji-avatar d-flex align-items-center justify-content-center py-3">
+                        <div class="memoji-avatar d-flex align-items-center justify-content-lg-center py-5">
                             <img class="flex-shrink-0" src="img/about-memoji-04.png" alt="">
                             <div class="ps-3">
                                 <p class="fz-15 fw-bold mb-0">HR-директор</p>
@@ -120,7 +120,7 @@
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4">
-                        <div class="memoji-avatar d-flex align-items-center justify-content-center py-5">
+                        <div class="memoji-avatar d-flex align-items-center justify-content-lg-center py-2">
                             <img class="flex-shrink-0" src="img/about-memoji-02.png" alt="">
                             <div class="ps-3">
                                 <p class="fz-15 fw-bold mb-0">Программист</p>
@@ -129,7 +129,7 @@
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4">
-                        <div class="memoji-avatar d-flex align-items-center justify-content-center py-2">
+                        <div class="memoji-avatar d-flex align-items-center justify-content-lg-center py-5">
                             <img class="flex-shrink-0" src="img/about-memoji-03.png" alt="">
                             <div class="ps-3">
                                 <p class="fz-15 fw-bold mb-0">Дизайнер</p>
@@ -138,7 +138,7 @@
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4">
-                        <div class="memoji-avatar d-flex align-items-center justify-content-center py-3">
+                        <div class="memoji-avatar d-flex align-items-center justify-content-lg-center py-2">
                             <img class="flex-shrink-0" src="img/about-memoji-05.png" alt="">
                             <div class="ps-3">
                                 <p class="fz-15 fw-bold mb-0">SEO-специалист</p>
@@ -147,7 +147,7 @@
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-6">
-                        <div class="memoji-avatar d-flex align-items-center justify-content-center py-5">
+                        <div class="memoji-avatar d-flex align-items-center justify-content-lg-center py-5">
                             <img class="flex-shrink-0" src="img/about-memoji-06.png" alt="">
                             <div class="ps-3">
                                 <p class="fz-15 fw-bold mb-0">Проектный менеджер</p>
@@ -156,7 +156,7 @@
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-6">
-                        <div class="memoji-avatar d-flex align-items-center justify-content-center py-2">
+                        <div class="memoji-avatar d-flex align-items-center justify-content-lg-center py-2">
                             <img class="flex-shrink-0" src="img/about-memoji-07.png" alt="">
                             <div class="ps-3">
                                 <p class="fz-15 fw-bold mb-0">Верстальщик</p>
@@ -165,7 +165,7 @@
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4">
-                        <div class="memoji-avatar d-flex align-items-center justify-content-center py-3">
+                        <div class="memoji-avatar d-flex align-items-center justify-content-lg-center py-5">
                             <img class="flex-shrink-0" src="img/about-memoji-08.png" alt="">
                             <div class="ps-3">
                                 <p class="fz-15 fw-bold mb-0">Контент-менеджер</p>
@@ -174,7 +174,7 @@
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4">
-                        <div class="memoji-avatar d-flex align-items-center justify-content-center py-4">
+                        <div class="memoji-avatar d-flex align-items-center justify-content-lg-center py-2">
                             <img class="flex-shrink-0" src="img/about-memoji-09.png" alt="">
                             <div class="ps-3">
                                 <p class="fz-15 fw-bold mb-0">Менеджер по продажам</p>
@@ -183,7 +183,7 @@
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4">
-                        <div class="memoji-avatar d-flex align-items-center justify-content-center py-5">
+                        <div class="memoji-avatar d-flex align-items-center justify-content-lg-center py-5">
                             <img class="flex-shrink-0" src="img/about-memoji-10.png" alt="">
                             <div class="ps-3">
                                 <p class="fz-15 fw-bold mb-0">Менеджер по продажам</p>
