--- a/shop-item.html
+++ b/shop-item.html
@@ -51,6 +51,7 @@
                                 </ul>
                             </li> -->
                             <li class="nav-item"><a class="nav-link active" href="shop.html">Шаблоны</a></li>
+                            <li class="nav-item"><a class="nav-link" href="blog.html">Блог</a></li>
                             <li class="nav-item"><a class="nav-link" href="contact.html">Контакты</a></li>
                         </ul>
                     </div>
@@ -91,9 +92,13 @@
                             <p><span class="color-blue">Технологии</span>: React JS, HTML5, SASS, LESS, SCSS, Bootstrap 5</p>
                             <p>Это удобный сайт и гибкий шаблон для магазина одежды.</p>
                             <p>Отзывчивый макет, современные цветовые стили. Динамический AJAX фильтр, CSS3, HTML5 и многие другие функции, которые помогут Вам создать магазин.</p>
-                            <div class="mt-5">
-                                <a class="btn btn-primary" href="#mainForm" data-bs-toggle="modal" data-bs-target="#mainForm">Оставить заявку</a>
-                                <a class="btn btn-secondary" href="#">Демо</a>
+                            <div class="row g-3 py-5">
+                                <div class="col-md-6">
+                                    <a class="btn btn-primary w-100" href="#mainForm" data-bs-toggle="modal" data-bs-target="#mainForm">Купить</a>
+                                </div>
+                                <div class="col-md-6">
+                                    <a class="btn btn-outline w-100" href="#">Демо</a>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -125,6 +130,7 @@
                             <li class="nav-item"><a href="about.html" class="nav-link px-2">Веб-студия</a></li>
                             <li class="nav-item"><a href="cases.html" class="nav-link px-2">Кейсы</a></li>
                             <li class="nav-item"><a href="shop.html" class="nav-link px-2">Шаблоны</a></li>
+                            <li class="nav-item"><a href="blog.html" class="nav-link px-2">Блог</a></li>
                             <li class="nav-item"><a href="contact.html" class="nav-link px-2">Контакты</a></li>
                         </ul>
                     </div>
@@ -156,7 +162,7 @@
     </footer>
 
     <!-- Back to Top -->
-    <button type="button" class="btn-scroll-top">
+    <button type="button" class="btn btn-icon btn-scroll-top rounded-circle">
         <i class="bx bx-up-arrow-alt"></i>
     </button>
 
