--- a/shop.html
+++ b/shop.html
@@ -51,6 +51,7 @@
                                 </ul>
                             </li> -->
                             <li class="nav-item"><a class="nav-link active" href="shop.html">Шаблоны</a></li>
+                            <li class="nav-item"><a class="nav-link" href="blog.html">Блог</a></li>
                             <li class="nav-item"><a class="nav-link" href="contact.html">Контакты</a></li>
                         </ul>
                     </div>
@@ -112,9 +113,13 @@
                                 </div>
                             </div>
                             <div class="card-footer">
-                                <div class="d-flex justify-content-between">
-                                    <a class="btn btn-primary" href="shop-item.html">Подробнее</a>
-                                    <a class="btn btn-secondary" href="#">Демо</a>
+                                <div class="row g-3">
+                                    <div class="col-lg-6">
+                                        <a class="btn btn-primary w-100" href="shop-item.html">Подробнее</a>
+                                    </div>
+                                    <div class="col-lg-6">
+                                        <a class="btn btn-outline w-100" href="#">Демо</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -125,7 +130,7 @@
                                 <img class="card-img" src="img/shop-item-02.png" alt="">
                             </a>
                             <div class="card-body">
-                                <p class="small mb-0">WordPress</p>
+                                <p class="small mb-0">Bootstrap 5</p>
                                 <p class="fz-15">Интернет-магазин мебели</p>
                                 <div class="d-flex justify-content-between py-3">
                                     <p class="small">№123456</p>
@@ -133,9 +138,13 @@
                                 </div>
                             </div>
                             <div class="card-footer">
-                                <div class="d-flex justify-content-between">
-                                    <a class="btn btn-primary" href="shop-item.html">Подробнее</a>
-                                    <a class="btn btn-secondary" href="#">Демо</a>
+                                <div class="row g-3">
+                                    <div class="col-lg-6">
+                                        <a class="btn btn-primary w-100" href="shop-item.html">Подробнее</a>
+                                    </div>
+                                    <div class="col-lg-6">
+                                        <a class="btn btn-outline w-100" href="#">Демо</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -146,7 +155,7 @@
                                 <img class="card-img" src="img/shop-item-02.png" alt="">
                             </a>
                             <div class="card-body">
-                                <p class="small mb-0">WordPress</p>
+                                <p class="small mb-0">React JS</p>
                                 <p class="fz-15">Интернет-магазин мебели</p>
                                 <div class="d-flex justify-content-between py-3">
                                     <p class="small">№123456</p>
@@ -154,9 +163,13 @@
                                 </div>
                             </div>
                             <div class="card-footer">
-                                <div class="d-flex justify-content-between">
-                                    <a class="btn btn-primary" href="shop-item.html">Подробнее</a>
-                                    <a class="btn btn-secondary" href="#">Демо</a>
+                                <div class="row g-3">
+                                    <div class="col-lg-6">
+                                        <a class="btn btn-primary w-100" href="shop-item.html">Подробнее</a>
+                                    </div>
+                                    <div class="col-lg-6">
+                                        <a class="btn btn-outline w-100" href="#">Демо</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -175,9 +188,13 @@
                                 </div>
                             </div>
                             <div class="card-footer">
-                                <div class="d-flex justify-content-between">
-                                    <a class="btn btn-primary" href="shop-item.html">Подробнее</a>
-                                    <a class="btn btn-secondary" href="#">Демо</a>
+                                <div class="row g-3">
+                                    <div class="col-lg-6">
+                                        <a class="btn btn-primary w-100" href="shop-item.html">Подробнее</a>
+                                    </div>
+                                    <div class="col-lg-6">
+                                        <a class="btn btn-outline w-100" href="#">Демо</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -196,9 +213,13 @@
                                 </div>
                             </div>
                             <div class="card-footer">
-                                <div class="d-flex justify-content-between">
-                                    <a class="btn btn-primary" href="shop-item.html">Подробнее</a>
-                                    <a class="btn btn-secondary" href="#">Демо</a>
+                                <div class="row g-3">
+                                    <div class="col-lg-6">
+                                        <a class="btn btn-primary w-100" href="shop-item.html">Подробнее</a>
+                                    </div>
+                                    <div class="col-lg-6">
+                                        <a class="btn btn-outline w-100" href="#">Демо</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -217,9 +238,13 @@
                                 </div>
                             </div>
                             <div class="card-footer">
-                                <div class="d-flex justify-content-between">
-                                    <a class="btn btn-primary" href="shop-item.html">Подробнее</a>
-                                    <a class="btn btn-secondary" href="#">Демо</a>
+                                <div class="row g-3">
+                                    <div class="col-lg-6">
+                                        <a class="btn btn-primary w-100" href="shop-item.html">Подробнее</a>
+                                    </div>
+                                    <div class="col-lg-6">
+                                        <a class="btn btn-outline w-100" href="#">Демо</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -238,9 +263,13 @@
                                 </div>
                             </div>
                             <div class="card-footer">
-                                <div class="d-flex justify-content-between">
-                                    <a class="btn btn-primary" href="shop-item.html">Подробнее</a>
-                                    <a class="btn btn-secondary" href="#">Демо</a>
+                                <div class="row g-3">
+                                    <div class="col-lg-6">
+                                        <a class="btn btn-primary w-100" href="shop-item.html">Подробнее</a>
+                                    </div>
+                                    <div class="col-lg-6">
+                                        <a class="btn btn-outline w-100" href="#">Демо</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -259,9 +288,13 @@
                                 </div>
                             </div>
                             <div class="card-footer">
-                                <div class="d-flex justify-content-between">
-                                    <a class="btn btn-primary" href="shop-item.html">Подробнее</a>
-                                    <a class="btn btn-secondary" href="#">Демо</a>
+                                <div class="row g-3">
+                                    <div class="col-lg-6">
+                                        <a class="btn btn-primary w-100" href="shop-item.html">Подробнее</a>
+                                    </div>
+                                    <div class="col-lg-6">
+                                        <a class="btn btn-outline w-100" href="#">Демо</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -280,9 +313,13 @@
                                 </div>
                             </div>
                             <div class="card-footer">
-                                <div class="d-flex justify-content-between">
-                                    <a class="btn btn-primary" href="shop-item.html">Подробнее</a>
-                                    <a class="btn btn-secondary" href="#">Демо</a>
+                                <div class="row g-3">
+                                    <div class="col-lg-6">
+                                        <a class="btn btn-primary w-100" href="shop-item.html">Подробнее</a>
+                                    </div>
+                                    <div class="col-lg-6">
+                                        <a class="btn btn-outline w-100" href="#">Демо</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -312,6 +349,7 @@
                             <li class="nav-item"><a href="about.html" class="nav-link px-2">Веб-студия</a></li>
                             <li class="nav-item"><a href="cases.html" class="nav-link px-2">Кейсы</a></li>
                             <li class="nav-item"><a href="shop.html" class="nav-link px-2">Шаблоны</a></li>
+                            <li class="nav-item"><a href="blog.html" class="nav-link px-2">Блог</a></li>
                             <li class="nav-item"><a href="contact.html" class="nav-link px-2">Контакты</a></li>
                         </ul>
                     </div>
@@ -343,7 +381,7 @@
     </footer>
 
     <!-- Back to Top -->
-    <button type="button" class="btn-scroll-top">
+    <button type="button" class="btn btn-icon btn-scroll-top rounded-circle">
         <i class="bx bx-up-arrow-alt"></i>
     </button>
 
