--- a/cases.html
+++ b/cases.html
@@ -51,6 +51,7 @@
                                 </ul>
                             </li> -->
                             <li class="nav-item"><a class="nav-link" href="shop.html">Шаблоны</a></li>
+                            <li class="nav-item"><a class="nav-link" href="blog.html">Блог</a></li>
                             <li class="nav-item"><a class="nav-link" href="contact.html">Контакты</a></li>
                         </ul>
                     </div>
@@ -158,6 +159,7 @@
                             <li class="nav-item"><a href="about.html" class="nav-link px-2">Веб-студия</a></li>
                             <li class="nav-item"><a href="cases.html" class="nav-link px-2">Кейсы</a></li>
                             <li class="nav-item"><a href="shop.html" class="nav-link px-2">Шаблоны</a></li>
+                            <li class="nav-item"><a href="blog.html" class="nav-link px-2">Блог</a></li>
                             <li class="nav-item"><a href="contact.html" class="nav-link px-2">Контакты</a></li>
                         </ul>
                     </div>
@@ -189,7 +191,7 @@
     </footer>
 
     <!-- Back to Top -->
-    <button type="button" class="btn-scroll-top">
+    <button type="button" class="btn btn-icon btn-scroll-top rounded-circle">
         <i class="bx bx-up-arrow-alt"></i>
     </button>
 
