--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                                 </ul>
                             </li> -->
                             <li class="nav-item"><a class="nav-link" href="shop.html">Шаблоны</a></li>
+                            <li class="nav-item"><a class="nav-link" href="blog.html">Блог</a></li>
                             <li class="nav-item"><a class="nav-link" href="contact.html">Контакты</a></li>
                         </ul>
                     </div>
@@ -90,10 +91,10 @@
                             </div>
                             <div class="d-flex justify-content-end position-absolute bottom-0 end-0"
                                 style="z-index: 100;">
-                                <button type="button" class="btn btn-prev btn-icon" id="heroSwiper-prev">
+                                <button type="button" class="btn btn-icon btn-prev rounded-circle" id="heroSwiper-prev">
                                     <i class="bx bx-chevron-left"></i>
                                 </button>
-                                <button type="button" class="btn btn-next btn-icon" id="heroSwiper-next">
+                                <button type="button" class="btn btn-icon btn-next rounded-circle" id="heroSwiper-next">
                                     <i class="bx bx-chevron-right"></i>
                                 </button>
                             </div>
@@ -101,7 +102,7 @@
                     </div>
                     <div class="col-lg-2">
                         <div class="d-flex flex-column justify-content-center align-items-center h-100 pt-4 pt-lg-0">
-                            <a class="btn btn-primary btn-hero" href="#mainForm" data-bs-toggle="modal"
+                            <a class="btn btn-icon btn-primary btn-hero btn-lg rounded-circle" href="#mainForm" data-bs-toggle="modal"
                                 data-bs-target="#mainForm">написать</a>
                             <div class="bg-btn-hero bg-color-black"></div>
                         </div>
@@ -121,11 +122,11 @@
                                 earning rewards and saving money. But with hundreds of credit cards on the market.</p>
                         </div>
                         <div class="d-none d-lg-block">
-                            <a class="btn btn-secondary mt-5" href="#mainForm" data-bs-toggle="modal" data-bs-target="#mainForm">Узнать</a>
+                            <a class="btn btn-secondary btn-lg mt-5" href="#mainForm" data-bs-toggle="modal" data-bs-target="#mainForm">Заказать</a>
                         </div>
                     </div>
                     <div class="col-lg-5 offset-lg-1">
-                        <div class="scroll-box pe-3 pe-lg-4">
+                        <div class="scroll-box pe-lg-4">
                             <div class="row g-3 g-md-4 row-cols-1">
 
                                 <!-- Article -->
@@ -303,7 +304,7 @@
                             <div class="card-footer text-center py-4">
                                 <p class="fw-bold color-deep-blue">Срок от 2 дней</p>
                                 <p class="fw-light small text-muted">*В случае задержки предоставления материалов от Заказчика, срок разработки увеличивается.</p>
-                                <a class="btn btn-secondary mt-3" href="#mainForm" data-bs-toggle="modal" data-bs-target="#mainForm">Выбрать</a>
+                                <a class="btn btn-secondary btn-lg mt-3" href="#mainForm" data-bs-toggle="modal" data-bs-target="#mainForm">Выбрать</a>
                             </div>
                         </div>
                     </div>
@@ -331,7 +332,7 @@
                             <div class="card-footer text-center py-4">
                                 <p class="fw-bold color-deep-blue">Срок от 5 дней</p>
                                 <p class="fw-light small text-muted">*В случае задержки предоставления материалов от Заказчика, срок разработки увеличивается.</p>
-                                <a class="btn btn-secondary mt-3" href="#mainForm" data-bs-toggle="modal" data-bs-target="#mainForm">Выбрать</a>
+                                <a class="btn btn-secondary btn-lg mt-3" href="#mainForm" data-bs-toggle="modal" data-bs-target="#mainForm">Выбрать</a>
                             </div>
                         </div>
                     </div>
@@ -364,7 +365,7 @@
                             <div class="card-footer text-center py-4">
                                 <p class="fw-bold color-deep-blue">Срок от 10 дней</p>
                                 <p class="fw-light small text-muted">*В случае задержки предоставления материалов от Заказчика, срок разработки увеличивается.</p>
-                                <a class="btn btn-secondary mt-3" href="#mainForm" data-bs-toggle="modal" data-bs-target="#mainForm">Выбрать</a>
+                                <a class="btn btn-secondary btn-lg mt-3" href="#mainForm" data-bs-toggle="modal" data-bs-target="#mainForm">Выбрать</a>
                             </div>
                         </div>
                     </div>
@@ -427,7 +428,7 @@
                         </div>
                         <div class="col-lg-4">
                             <div class="text-lg-end">
-                                <a class="btn btn-primary" href="#mainForm" data-bs-toggle="modal"
+                                <a class="btn btn-primary btn-lg" href="#mainForm" data-bs-toggle="modal"
                                     data-bs-target="#mainForm">Оставить заявку</a>
                             </div>
                         </div>
@@ -542,6 +543,7 @@
                             <li class="nav-item"><a href="about.html" class="nav-link px-2">Веб-студия</a></li>
                             <li class="nav-item"><a href="cases.html" class="nav-link px-2">Кейсы</a></li>
                             <li class="nav-item"><a href="shop.html" class="nav-link px-2">Шаблоны</a></li>
+                            <li class="nav-item"><a href="blog.html" class="nav-link px-2">Блог</a></li>
                             <li class="nav-item"><a href="contact.html" class="nav-link px-2">Контакты</a></li>
                         </ul>
                     </div>
@@ -573,7 +575,7 @@
     </footer>
 
     <!-- Back to Top -->
-    <button type="button" class="btn-scroll-top">
+    <button type="button" class="btn btn-icon btn-scroll-top rounded-circle">
         <i class="bx bx-up-arrow-alt"></i>
     </button>
 
