buttons on pages

--- a/contact.html
+++ b/contact.html
@@ -88,7 +88,7 @@
                             <p><a href="#">+7 (495) 159-59-01</a></p>
                             <p><a href="#">support@startsite.studio</a></p>
                             <div class="py-5">
-                                <a class="btn btn-primary" href="#mainForm" data-bs-toggle="modal" data-bs-target="#mainForm">Оставить заявку</a>
+                                <a class="btn btn-primary btn-lg" href="#mainForm" data-bs-toggle="modal" data-bs-target="#mainForm">Оставить заявку</a>
                             </div>
                             <div class="fz-15">
                                 <p>К нам можно приехать и все обсудить,<br> если у вас более крупный проект</p>
