--- a/shop-item.html
+++ b/shop-item.html
@@ -94,10 +94,10 @@
                             <p>Отзывчивый макет, современные цветовые стили. Динамический AJAX фильтр, CSS3, HTML5 и многие другие функции, которые помогут Вам создать магазин.</p>
                             <div class="row g-3 py-5">
                                 <div class="col-md-6">
-                                    <a class="btn btn-primary w-100" href="#mainForm" data-bs-toggle="modal" data-bs-target="#mainForm">Купить</a>
+                                    <a class="btn btn-primary btn-lg w-100" href="#mainForm" data-bs-toggle="modal" data-bs-target="#mainForm">Купить</a>
                                 </div>
                                 <div class="col-md-6">
-                                    <a class="btn btn-outline w-100" href="#">Демо</a>
+                                    <a class="btn btn-secondary btn-lg w-100" href="#">Демо</a>
                                 </div>
                             </div>
                         </div>
