--- a/shop.html
+++ b/shop.html
@@ -101,7 +101,7 @@
                 <div class="row g-4">
                     <div class="col-md-6 col-lg-4">
                         <div class="card card-shop-item shadow mt-4">
-                            <a href="shop-item.html">
+                            <a class="hover-shine" href="shop-item.html">
                                 <img class="card-img" src="img/shop-item-01.png" alt="">
                             </a>
                             <div class="card-body">
@@ -126,7 +126,7 @@
                     </div>
                     <div class="col-md-6 col-lg-4">
                         <div class="card card-shop-item shadow mt-4">
-                            <a href="shop-item.html">
+                            <a class="hover-shine" href="shop-item.html">
                                 <img class="card-img" src="img/shop-item-02.png" alt="">
                             </a>
                             <div class="card-body">
@@ -151,7 +151,7 @@
                     </div>
                     <div class="col-md-6 col-lg-4">
                         <div class="card card-shop-item shadow mt-4">
-                            <a href="shop-item.html">
+                            <a class="hover-shine" href="shop-item.html">
                                 <img class="card-img" src="img/shop-item-02.png" alt="">
                             </a>
                             <div class="card-body">
@@ -176,7 +176,7 @@
                     </div>
                     <div class="col-md-6 col-lg-4">
                         <div class="card card-shop-item shadow mt-4">
-                            <a href="shop-item.html">
+                            <a class="hover-shine" href="shop-item.html">
                                 <img class="card-img" src="img/shop-item-01.png" alt="">
                             </a>
                             <div class="card-body">
@@ -201,7 +201,7 @@
                     </div>
                     <div class="col-md-6 col-lg-4">
                         <div class="card card-shop-item shadow mt-4">
-                            <a href="shop-item.html">
+                            <a class="hover-shine" href="shop-item.html">
                                 <img class="card-img" src="img/shop-item-01.png" alt="">
                             </a>
                             <div class="card-body">
@@ -226,7 +226,7 @@
                     </div>
                     <div class="col-md-6 col-lg-4">
                         <div class="card card-shop-item shadow mt-4">
-                            <a href="shop-item.html">
+                            <a class="hover-shine" href="shop-item.html">
                                 <img class="card-img" src="img/shop-item-02.png" alt="">
                             </a>
                             <div class="card-body">
@@ -251,7 +251,7 @@
                     </div>
                     <div class="col-md-6 col-lg-4">
                         <div class="card card-shop-item shadow mt-4">
-                            <a href="shop-item.html">
+                            <a class="hover-shine" href="shop-item.html">
                                 <img class="card-img" src="img/shop-item-02.png" alt="">
                             </a>
                             <div class="card-body">
@@ -276,7 +276,7 @@
                     </div>
                     <div class="col-md-6 col-lg-4">
                         <div class="card card-shop-item shadow mt-4">
-                            <a href="shop-item.html">
+                            <a class="hover-shine" href="shop-item.html">
                                 <img class="card-img" src="img/shop-item-01.png" alt="">
                             </a>
                             <div class="card-body">
@@ -301,7 +301,7 @@
                     </div>
                     <div class="col-md-6 col-lg-4">
                         <div class="card card-shop-item shadow mt-4">
-                            <a href="shop-item.html">
+                            <a class="hover-shine" href="shop-item.html">
                                 <img class="card-img" src="img/shop-item-01.png" alt="">
                             </a>
                             <div class="card-body">
